This is second commit.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 	<script type="text/javascript" src="js/js-file.js"></script> -->
 </head>
 <body>
-  <img src="img/KMUTT.png" width="30">
+  <img alt="KMUTT" src="img/KMUTT.png" width="30">
     <table border="1px">
-        <tr>
+        <tr><ol>
           <th>Person 1</th>
           <th>Person 2</th>
           <th>Person 3</th>
+        </ol>
+          
         </tr>
         <tr>
           <td>Emil</td>
